<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp">


    <TextView
        android:id="@+id/tvNumLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/num"
        android:textColor="#757575"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/divider8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/divider8"/>

    <View
        android:id="@+id/divider8"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="#D8D8D8"
        app:layout_constraintBottom_toBottomOf="@+id/tvNumCont"
        app:layout_constraintEnd_toStartOf="@+id/tvNumCont"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tvNumLabel"
        app:layout_constraintTop_toTopOf="@+id/tvNumCont" />

    <TextView
        android:id="@+id/tvNumCont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/num"
        android:textAlignment="textEnd"
        android:textColor="#757575"
        android:textSize="13sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.44"
        android:gravity="end"
        android:layout_marginRight="8dp"/>



    <TextView
        android:id="@+id/tvAltLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/alt"
        android:textColor="#757575"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/tvNumLabel"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvAltCont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/alt"
        android:textColor="#757575"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/tvAltLabel"
        app:layout_constraintStart_toStartOf="parent" />



    <TextView
        android:id="@+id/tvDiaLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/day"
        android:textColor="#757575"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/divider9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/divider9"/>

    <View
        android:id="@+id/divider9"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="#D8D8D8"
        app:layout_constraintBottom_toBottomOf="@+id/tvDiaCont"
        app:layout_constraintEnd_toStartOf="@+id/tvDiaCont"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tvDiaLabel"
        app:layout_constraintTop_toTopOf="@+id/tvDiaCont" />

    <TextView
        android:id="@+id/tvDiaCont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/num"
        android:textAlignment="textEnd"
        android:textColor="#757575"
        android:textSize="13sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAltCont"
        app:layout_constraintVertical_bias="0.44"
        android:gravity="end"
        android:layout_marginRight="8dp"/>


    <TextView
        android:id="@+id/tvMesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/month"
        android:textColor="#757575"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/divider10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/divider10"/>

    <View
        android:id="@+id/divider10"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="#D8D8D8"
        app:layout_constraintBottom_toBottomOf="@+id/tvMesCont"
        app:layout_constraintEnd_toStartOf="@+id/tvMesCont"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tvMesLabel"
        app:layout_constraintTop_toTopOf="@+id/tvMesCont" />

    <TextView
        android:id="@+id/tvMesCont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/month"
        android:textAlignment="textEnd"
        android:textColor="#757575"
        android:textSize="13sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDiaCont"
        app:layout_constraintVertical_bias="0.44"
        android:gravity="end"
        android:layout_marginRight="8dp"/>

    <TextView
        android:id="@+id/tvAnioLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/year"
        android:textColor="#757575"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/divider11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/divider11"/>

    <View
        android:id="@+id/divider11"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="#D8D8D8"
        app:layout_constraintBottom_toBottomOf="@+id/tvAnioCont"
        app:layout_constraintEnd_toStartOf="@+id/tvAnioCont"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tvAnioLabel"
        app:layout_constraintTop_toTopOf="@+id/tvAnioCont" />

    <TextView
        android:id="@+id/tvAnioCont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/year"
        android:textAlignment="textEnd"
        android:textColor="#757575"
        android:textSize="13sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMesCont"
        app:layout_constraintVertical_bias="0.44"
        android:gravity="end"
        android:layout_marginRight="8dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/favs"
        app:layout_constraintEnd_toStartOf="@+id/fabList"
        app:layout_constraintTop_toBottomOf="@+id/tvAnioCont"
        app:srcCompat="@android:drawable/ic_menu_save" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabOther"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/favs"
        app:layout_constraintEnd_toStartOf="@+id/fabAdd"
        app:layout_constraintTop_toBottomOf="@+id/tvAnioCont"
        app:srcCompat="@android:drawable/stat_notify_sync" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/favs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAnioCont"
        app:srcCompat="@android:drawable/btn_star_big_on" />


</androidx.constraintlayout.widget.ConstraintLayout>